# mlops-cdk-sample

./: .gitignore  Makefile  README.md  app.py  dev.Dockerfile  pyproject.toml
docker/: Dockerfile  pre_process.py  predict.Dockerfile  predict.py  preprocess.Dockerfile  preprocess.py  processing_script.py  train.Dockerfile  train.py
mlops_cdk_sample/: ecr copy.py  ecr.py  endpoint.py  image.py  preprocessing.py  s3.py  sample_app_stack.py  sm_processing.py  sm_training.py  stepfunctions.py  training.py
resources/: input.csv
tests/unit/: test_sample_app_stack.py
