[tool.poetry]
name = "mlops-cdk-sample"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "mlops_cdk_sample"}]

[tool.poetry.dependencies]
python = "^3.10"
aws-cdk-lib = "2.45.0"
constructs = "^10.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "6.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
