[tool.poetry]
name = "mlops-cdk-sample"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "mlops_cdk_sample"}]

[tool.poetry.dependencies]
python = "^3.9"
aws-cdk-lib = "2.45.0"
constructs = "^10.0.0"
sagemaker = "^2.112.2"
boto3 = "^1.24.90"
cdk-ecr-deployment = "^2.5.6"
python-dotenv = "^0.21.0"


[tool.poetry.group.dev.dependencies]
pytest = "6.2.5"
flake8 = "^5.0.4"
black = "^22.10.0"
isort = "^5.10.1"
mypy = "^0.982"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
